# MONITOR-POC

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-test.txt
.bmad-core/: install-manifest.yaml
.github/workflows/: README.md  build-images.yaml  ci.yaml  ci.yaml.example
config/: README.md
config/grafana/: grafana.ini
config/grafana/provisioning/datasources/: datasources.yml
config/loki/: loki-config.yml
config/prometheus/: prometheus.yml
dashboards/: README.md
docker/: docker-compose.dev.yml  docker-compose.mock.yml  docker-compose.prod.yml  docker-compose.yml
docs/: prd.md
docs/architecture/: api-specification.md  backend-architecture.md  checklist-results-report.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  deployment-architecture.md  development-workflow.md  error-handling-strategy.md  external-apis.md  frontend-architecture.md  high-level-architecture.md  index.md  introduction.md  key-directory-purposes.md  mock-data-architecture-phase-1.md  monitoring-and-observability.md  security-and-performance.md  tech-stack.md  testing-strategy.md  unified-project-structure.md
docs/epics/: epic-001-project-foundation.md  epic-002-mock-data-infrastructure.md  epic-003-core-monitoring-stack.md  epic-004-system-monitoring-dashboards.md  epic-005-llm-specific-dashboards.md  epic-006-operational-dashboards.md  epic-007-base-exporter-framework.md  epic-008-infrastructure-exporters.md  epic-009-llm-integration-exporters.md  epic-010-system-integration.md  epic-011-testing-quality-assurance.md  epic-012-deployment-operations.md  index.md
docs/stories/: 1.1-project-initialization.story.md  1.2-prometheus-setup.story.md  1.3-loki-setup.story.md  1.4-ci-cd-pipeline-foundation.story.md  1.5-container-metrics-setup.story.md
exporters/: README.md
tests/: README.md  conftest.py
tests/integration/: test_cadvisor_setup.py  test_loki_setup.py  test_prometheus_scrape.py
